Add clear button on date range picker

--- a/lib/java/com/google/android/material/datepicker/res/layout/mtrl_picker_header_fullscreen.xml
+++ b/lib/java/com/google/android/material/datepicker/res/layout/mtrl_picker_header_fullscreen.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
      Copyright (C) 2019 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
@@ -45,17 +44,17 @@
       android:insetTop="0dp"
       android:insetBottom="0dp"
       android:padding="12dp"
-      app:icon="@drawable/material_ic_clear_black_24dp"/>
+      app:icon="@drawable/material_ic_clear_black_24dp" />
 
     <FrameLayout
       android:id="@+id/mtrl_picker_header_title_and_selection"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_weight="1"
-      android:paddingStart="@dimen/mtrl_calendar_header_text_padding"
-      android:paddingLeft="@dimen/mtrl_calendar_header_text_padding"
       android:focusable="true"
-      android:focusableInTouchMode="true">
+      android:focusableInTouchMode="true"
+      android:paddingStart="@dimen/mtrl_calendar_header_text_padding"
+      android:paddingLeft="@dimen/mtrl_calendar_header_text_padding">
 
       <TextView
         android:id="@+id/mtrl_picker_title_text"
@@ -64,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|start"
         android:gravity="start|bottom"
-        app:firstBaselineToTopHeight="@dimen/mtrl_calendar_title_baseline_to_top_fullscreen"/>
+        app:firstBaselineToTopHeight="@dimen/mtrl_calendar_title_baseline_to_top_fullscreen" />
 
       <TextView
         android:id="@+id/mtrl_picker_header_selection_text"
@@ -75,7 +74,7 @@
         android:gravity="start|bottom"
         android:paddingBottom="@dimen/mtrl_calendar_pre_l_text_clip_padding"
         app:firstBaselineToTopHeight="@dimen/mtrl_calendar_selection_baseline_to_top_fullscreen"
-        app:lineHeight="@dimen/mtrl_calendar_header_selection_line_height"/>
+        app:lineHeight="@dimen/mtrl_calendar_header_selection_line_height" />
     </FrameLayout>
 
     <LinearLayout
@@ -83,16 +82,31 @@
       android:layout_height="wrap_content"
       android:orientation="@integer/mtrl_calendar_header_orientation">
 
-      <com.google.android.material.button.MaterialButton
-        android:id="@+id/confirm_button"
-        style="?attr/materialCalendarHeaderConfirmButton"
+      <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/mtrl_min_touch_target_size"
-        android:layout_gravity="end|top"
-        android:contentDescription="@string/mtrl_picker_save"
-        android:text="@string/mtrl_picker_save"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="end|top">
 
-      <include layout="@layout/mtrl_picker_header_toggle"/>
+        <com.google.android.material.button.MaterialButton
+          android:id="@+id/clear_button"
+          style="?attr/materialCalendarHeaderConfirmButton"
+          android:layout_width="wrap_content"
+          android:layout_height="@dimen/mtrl_min_touch_target_size"
+          android:contentDescription="@string/mtrl_picker_cancel"
+          android:text="@string/mtrl_picker_clear" />
+
+        <com.google.android.material.button.MaterialButton
+          android:id="@+id/confirm_button"
+          style="?attr/materialCalendarHeaderConfirmButton"
+          android:layout_width="wrap_content"
+          android:layout_height="@dimen/mtrl_min_touch_target_size"
+          android:contentDescription="@string/mtrl_picker_save"
+          android:text="@string/mtrl_picker_save" />
+
+      </LinearLayout>
+
+      <include layout="@layout/mtrl_picker_header_toggle" />
     </LinearLayout>
   </LinearLayout>
 
@@ -100,6 +114,6 @@
     style="?attr/materialCalendarHeaderDivider"
     android:layout_width="match_parent"
     android:layout_height="@dimen/mtrl_calendar_header_divider_thickness"
-    android:layout_gravity="bottom"/>
+    android:layout_gravity="bottom" />
 
 </merge>
