--- a/lib/java/com/google/android/material/datepicker/res/layout/mtrl_picker_actions.xml
+++ b/lib/java/com/google/android/material/datepicker/res/layout/mtrl_picker_actions.xml
@@ -41,4 +41,13 @@
     android:minWidth="@dimen/mtrl_calendar_action_confirm_button_min_width"
     android:text="@string/mtrl_picker_confirm"/>
 
+  <Button
+    android:id="@+id/clear_button"
+    style="?attr/buttonBarPositiveButtonStyle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical"
+    android:visibility="gone"
+    android:text="@string/mtrl_picker_clear"/>
+
 </LinearLayout>
